--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
-lib_deps =
-  ESP32 BLE Arduino
-
+board_build.partitions = huge_app.csv
+lib_deps = 
+	ESP32 BLE Arduino
+	bblanchon/ArduinoJson@^7.4.2
